--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A bakery online shopping store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist/"
   },
   "author": "Jose Arteaga",
   "license": "MIT",
