--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A bakery online shopping store",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d dist/"
+    "deploy": "gh-pages -d dist/",
+    "cleanup": "rm -rf .cache dist",
+    "dev": "npm run cleanup && parcel index.html"
   },
   "author": "Jose Arteaga",
   "license": "MIT",
